Remove guava dependencies